--- a/development.html
+++ b/development.html
@@ -57,9 +57,9 @@
                     
                     <nav class="header_nav">
                         <ul class="header_menu_ul">
-                            <li><a href="">Главная</a></li>
-                            <li><a href="">Услуги</a></li>
-                            <li><a href="">Портфолио</a></li>
+                            <li><a href="index.html">Главная</a></li>
+                            <li><a href="#">Разработка сайтов</a></li>
+                            <li><a href="seo.html">Seo-продвижение</a></li>
                             <li><a href="">Клиенты</a></li>
                             <li><a href="">Блог</a></li>
                             <li><a href="">О нас</a></li>
