--- a/development.html
+++ b/development.html
@@ -58,6 +58,7 @@
                     <nav class="header_nav">
                         <ul class="header_menu_ul">
                             <li><a href="index.html">Главная</a></li>
+                            <li><a href="services.html">Услуги</a></li>
                             <li><a href="#">Разработка сайтов</a></li>
                             <li><a href="seo.html">Seo-продвижение</a></li>
                             <li><a href="">Клиенты</a></li>
