--- a/development.html
+++ b/development.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ООО «Хаски медиа»</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="source/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -57,10 +57,15 @@
                     
                     <nav class="header_nav">
                         <ul class="header_menu_ul">
-                            <li><a href="index.html">Главная</a></li>
-                            <li><a href="services.html">Услуги</a></li>
-                            <li><a href="#">Разработка сайтов</a></li>
-                            <li><a href="seo.html">Seo-продвижение</a></li>
+                            <li><a href="">Главная</a></li>
+                            <li><a href="">Услуги</a>
+                                <span class="header_menu_arrow"></span>
+                                 <ul class="dropdown">
+                                     <li><a href="#">Разработка сайтов</a></li>
+                                     <li><a href="#">Seo-продвижение</a></li>
+                                 </ul>
+                            </li>
+                            <li><a href="">Портфолио</a></li>
                             <li><a href="">Клиенты</a></li>
                             <li><a href="">Блог</a></li>
                             <li><a href="">О нас</a></li>
@@ -579,16 +584,6 @@
 
            </div>
             
-
-
-
-
-
-
-
-
-
-
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
         <script src='js/slick.min.js'></script> 
