--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
                     
                     <nav class="header_nav">
                         <ul class="header_menu_ul">
-                            <li><a href="">Главная</a></li>
-                            <li><a href="">Услуги</a>
+                            <li><a href="#">Главная</a></li>
+                            <li><a href="services.html">Услуги</a>
                                 <span class="header_menu_arrow"></span>
                                  <ul class="dropdown">
-                                     <li><a href="#">Разработка сайтов</a></li>
-                                     <li><a href="#">Seo-продвижение</a></li>
+                                     <li><a href="development.html">Разработка сайтов</a></li>
+                                     <li><a href="seo.html">Seo-продвижение</a></li>
+                                     <li><a href="smm.html">SMM-продвижение</a></li>
+                                     <li><a href="complex_prom.html">комплексное продвижение</a></li>
                                  </ul>
                             </li>
                             <li><a href="">Портфолио</a></li>
