--- a/smm.html
+++ b/smm.html
@@ -64,7 +64,7 @@
                                      <li><a href="development.html">Разработка сайтов</a></li>
                                      <li><a href="seo.html">Seo-продвижение</a></li>
                                      <li><a href="#">SMM-продвижение</a></li>
-                                     <li><a href="complex_prom.html">комплексное продвижение</a></li>
+                                     <li><a href="complex_prom.html">Комплексное продвижение</a></li>
                                  </ul>
                             </li>
                             <li><a href="">Портфолио</a></li>
