--- a/services.html
+++ b/services.html
@@ -83,7 +83,7 @@
         <main class="main">
 
             <div class="main_wrap">
-                <div class="breadcrumbs">
+                <div class="breadcrumbs_services">
                     <ul>
                         <li><a href="index.html">Главная</a></li>
                         <li>/</li>
