--- a/complex_prom.html
+++ b/complex_prom.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>ООО «Хаски медиа»</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="fonts/icomoon/style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
@@ -64,14 +64,25 @@
                                      <li><a href="development.html">Разработка сайтов</a></li>
                                      <li><a href="seo.html">Seo-продвижение</a></li>
                                      <li><a href="smm.html">SMM-продвижение</a></li>
-                                     <li><a href="#">комплексное продвижение</a></li>
+                                     <li><a href="complex_prom.html">комплексное продвижение</a></li>
                                  </ul>
                             </li>
-                            <li><a href="">Портфолио</a></li>
+                            <li><a href="case.html">Портфолио</a>
+                                <span class="header_menu_arrow"></span>
+                                 <ul class="dropdown">
+                                    <li><a href="case_seo.html">Кейсы по SEO-продвижению</a></li>
+                                    <li><a href="case_landing.html">Кейсы по Landing Page</a></li>
+                                    <li><a href="case_contex.html">Кейсы по контекстной рекламе</a></li>
+                                    <li><a href="case_card.html">Кейсы по разработке сайтов-визиток</a></li>
+                                    <li><a href="case_corporate.html">Кейсы по разработке корпоративных сайтов</a></li>
+                                    <li><a href="case_catalog.html">Кейсы по интернет-каталогов</a></li>
+                                    <li><a href="case_shop.html">Кейсы по разработке интернет-магазинов</a></li>
+                                 </ul>
+                            </li>
                             <li><a href="">Клиенты</a></li>
                             <li><a href="">Блог</a></li>
                             <li><a href="">О нас</a></li>
-                            <li><a href="">Контакты</a></li>
+                            <li><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -130,24 +141,44 @@
                 </div>
             </div>
 
-            <div class="main_wrap_color">
+            <div class="cp_price_wrap_color">
                 <div class="main_wrap cp_price">
                     <h2 class="main_title">Тарифы</h2>
                     <div class="cp_price_box">
                         <h5>Старт</h5>
-                        <p>Технический аудит сайта; юзабилити аудит; seo-продвижение : внутренняя оптимизация (до 7 часов в месяц), статьи на категории (до 3 в месяц) , одна информационная статья; контекстная реклама ; таргетированная реклама ( до 3 промо в месяц) </p>
+                        <ul>
+                            <li>Технический аудит сайта</li> 
+                            <li>Юзабилити аудит</li> 
+                            <li>Seo-продвижение: внутренняя оптимизация (до 7 часов в месяц), статьи на категории (до 3 в месяц) , одна информационная статья</li> 
+                            <li>Контекстная реклама</li>
+                            <li>Таргетированная реклама ( до 3 промо в месяц)</li>
+                        </ul>
+
                         <p class="cp_price_p">от 650 руб</p>
                     </div>
 
                     <div class="cp_price_box">
                         <h5>Оптима</h5>
-                        <p>Технический аудит сайта; юзабилити аудит - ежемесячно; seo-продвижение : внутренняя оптимизация (до 15 часов в месяц), статьи на категории (до 5 в месяц) , две информационные статьи; контекстная реклама ; таргетированная реклама ( до 5 промо в месяц) </p>
+                        <ul>
+                            <li>Технический аудит сайта</li> 
+                            <li>Юзабилити аудит - ежемесячно</li> 
+                            <li>Seo-продвижение: внутренняя оптимизация (до 15 часов в месяц), статьи на категории (до 5 в месяц) , две информационные статьи</li> 
+                            <li>Контекстная реклама</li> 
+                            <li>Таргетированная реклама ( до 5 промо в месяц)</li>
+                        </ul>
+
                         <p class="cp_price_p">от 900 руб</p>
                     </div>
 
                     <div class="cp_price_box">
                         <h5>Профи</h5>
-                        <p>Технический аудит сайта; юзабилити аудит - ежемесячно; seo-продвижение : внутренняя оптимизация (от 20 часов в месяц), статьи на категории (до 7 в месяц) ,  информационные статьи; контекстная реклама ; таргетированная реклама ( до 8 промо в месяц) </p>
+                        <ul>
+                            <li>Технический аудит сайта</li> 
+                            <li>юзабилити аудит - ежемесячно</li> 
+                            <li>seo-продвижение: внутренняя оптимизация (от 20 часов в месяц), статьи на категории (до 7 в месяц), информационные статьи</li> 
+                            <li>контекстная реклама</li>
+                            <li>таргетированная реклама ( до 8 промо в месяц)</li>
+                        </ul>
                         <p class="cp_price_p">От 1100 руб </p>
                     </div>
 
@@ -161,7 +192,7 @@
 
             <div class="main_wrap">
                 <div class="cp_proc">
-                        <h2 class="main_title">Как происходит разработка?</h2>
+                        <h2 class="main_title">Этапы комплексного продвижения</h2>
 
                     <div class="cp_proc_box">
                         <div class="cp_proc_num dev_proc_num_1">1</div>
@@ -180,33 +211,40 @@
                     <div class="cp_proc_box">
                         <div class="cp_proc_num cp_proc_num_1">3</div>
                         <div class="cp_proc_text">
-                            <h4>Проводятся доработки, необходимость которых выявлена при проведении аудита</h4>
+                            <h4>Составление стратегии продвижения</h4>
                         </div>
                     </div>
 
                     <div class="cp_proc_box">
                         <div class="cp_proc_num cp_proc_num_1">4</div>
                         <div class="cp_proc_text">
-                            <h4>Запускаем в работу все каналы привлечения трафика</h4>
+                            <h4>Проводятся доработки, необходимость которых выявлена при проведении аудита</h4>
                         </div>
                     </div>
 
                     <div class="cp_proc_box">
                         <div class="cp_proc_num cp_proc_num_1">5</div>
                         <div class="cp_proc_text">
-                            <h4>Еженедельная аналитика</h4>
+                            <h4>Запускаем в работу все каналы привлечения трафика</h4>
                         </div>
                     </div>
 
                     <div class="cp_proc_box">
                         <div class="cp_proc_num cp_proc_num_1">6</div>
                         <div class="cp_proc_text">
-                            <h4>Корректировка рекламных кампаний</h4>
+                            <h4>Еженедельная аналитика</h4>
                         </div>
                     </div>
 
                     <div class="cp_proc_box">
                         <div class="cp_proc_num cp_proc_num_1">7</div>
+                        <div class="cp_proc_text">
+                            <h4>Корректировка рекламных кампаний</h4>
+                        </div>
+                    </div>
+
+                    <div class="cp_proc_box">
+                        <div class="cp_proc_num cp_proc_num_1">8</div>
                         <div class="cp_proc_text">
                             <h4>Ежемесячная отчетность</h4>
                         </div>
