--- a/smm.html
+++ b/smm.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>ООО «Хаски медиа»</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="fonts/icomoon/style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
@@ -63,15 +63,26 @@
                                  <ul class="dropdown">
                                      <li><a href="development.html">Разработка сайтов</a></li>
                                      <li><a href="seo.html">Seo-продвижение</a></li>
-                                     <li><a href="#">SMM-продвижение</a></li>
-                                     <li><a href="complex_prom.html">Комплексное продвижение</a></li>
+                                     <li><a href="smm.html">SMM-продвижение</a></li>
+                                     <li><a href="complex_prom.html">комплексное продвижение</a></li>
                                  </ul>
                             </li>
-                            <li><a href="">Портфолио</a></li>
+                            <li><a href="case.html">Портфолио</a>
+                                <span class="header_menu_arrow"></span>
+                                 <ul class="dropdown">
+                                    <li><a href="case_seo.html">Кейсы по SEO-продвижению</a></li>
+                                    <li><a href="case_landing.html">Кейсы по Landing Page</a></li>
+                                    <li><a href="case_contex.html">Кейсы по контекстной рекламе</a></li>
+                                    <li><a href="case_card.html">Кейсы по разработке сайтов-визиток</a></li>
+                                    <li><a href="case_corporate.html">Кейсы по разработке корпоративных сайтов</a></li>
+                                    <li><a href="case_catalog.html">Кейсы по интернет-каталогов</a></li>
+                                    <li><a href="case_shop.html">Кейсы по разработке интернет-магазинов</a></li>
+                                 </ul>
+                            </li>
                             <li><a href="">Клиенты</a></li>
                             <li><a href="">Блог</a></li>
                             <li><a href="">О нас</a></li>
-                            <li><a href="">Контакты</a></li>
+                            <li><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
